--- a/ecoMonedasMVC/Views/Shared/_Layout.cshtml
+++ b/ecoMonedasMVC/Views/Shared/_Layout.cshtml
@@ -46,16 +46,16 @@
             </div>
         </div>
     </nav>
-    <div class="hero-wrap js-fullheight" style="background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
+    <div class="hero-wrap js-fullheight" style="background-image: url('images/EcoMonedas/Fondo.jpg');" data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
             <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
                 <div class="col-md-10 text-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                     <h2 class="subheading" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">We are here to help!</h2>
                     <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">
-                        <span>Experience</span> . <span>Innovation</span> . <span>Excellence</span>
+                        <span>Descubre los beneficios de reciclar</span> 
                     </h1>
-                    <p><a href="#" class="btn btn-primary py-3 px-4">Request a Free Consultation</a></p>
+                    <p><a href="#" class="btn btn-primary py-3 px-4">Conocé nuestro propósito</a></p>
                 </div>
             </div>
         </div>
