--- a/ecoMonedasMVC/Views/Shared/_Layout.cshtml
+++ b/ecoMonedasMVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -41,6 +43,7 @@
                    <li class="nav-item">@Html.ActionLink("Sobre Ecomonedas", "Index", "Home", new { @class = "nav-link" })</li>                  
                     <li class="nav-item">@Html.ActionLink("Centros de Acopio", "Index", "Home", new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("Materiales de reciclaje", "Index", "Home", new { @class = "nav-link" })</li>
+                    <li class="nav-item">@Html.ActionLink("Iniciar Sesión", "InicioSesion", "Home", new { @class = "nav-link" })</li>
 
                 </ul>
             </div>
