--- a/ecoMonedasMVC/Views/Home/InicioSesion.cshtml
+++ b/ecoMonedasMVC/Views/Home/InicioSesion.cshtml
@@ -1,9 +1,4 @@
-﻿@*@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}*@
-
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Contact V3</title>
