--- a/ecoMonedasMVC/Views/Shared/_Layout.cshtml
+++ b/ecoMonedasMVC/Views/Shared/_Layout.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -23,9 +21,6 @@
     <link rel="stylesheet" href="~/Content/style.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-
-
-
 </head>
 <body>
 
@@ -448,10 +443,8 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <p>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script> All rights reserved | Marie Ugalde -- David Sanchez <a href="https://colorlib.com" target="_blank"></a>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        <script>document.write(new Date().getFullYear());</script> All rights reserved | Marie Ugalde -- David Sanchez <a href="" target="_blank"></a>
                     </p>
                 </div>
             </div>
@@ -478,19 +471,9 @@
     <script src="~/Scripts/main.js"></script>
 
  
-    
-    
-     <!-- Aqui comienza la parte de programacion-->
-
-    <div class="container body-content">
+    <div>
         @RenderBody()
-
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
     </div>
-
 
 </body>
 </html>
