--- a/ecoMonedasMVC/Views/Shared/Error.cshtml
+++ b/ecoMonedasMVC/Views/Shared/Error.cshtml
@@ -7,7 +7,10 @@
 <body>
     <hgroup>
         <h1>Error.</h1>
-        <h2>An error occurred while processing your request.</h2>
+        <h2>Ha ocurrido un error al procesar su requerimiento.</h2>
+
+        @Html.ActionLink("Volver al inicio", "Index", "Home", new { area = "" }, new { @class = "btn btn-primary" })
+
     </hgroup>
 </body>
 </html>
