--- a/ecoMonedasMVC/Views/Shared/_Layout.cshtml
+++ b/ecoMonedasMVC/Views/Shared/_Layout.cshtml
@@ -22,6 +22,14 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
+<style type="text/css">
+
+    .block-2 .front {
+        background-color: #f3f1f2 !important;
+        background-size: contain !important;
+    }
+
+</style>
 <body>
 
     @*-- nav*@
