--- a/ecoMonedasMVC/Views/CentroAcopios/Index.cshtml
+++ b/ecoMonedasMVC/Views/CentroAcopios/Index.cshtml
@@ -9,41 +9,41 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
+<table class="table table-hover">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Provincias.id)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Usuario.Nombre)
-        </th>
-        <th>
+        <th style="background-color:#eac15a">
             @Html.DisplayNameFor(model => model.Nombre)
         </th>
-        <th>
+        <th style="background-color:#eac15a">
+            @Html.DisplayNameFor(model => model.Provincias.descripcion)
+        </th>
+        <th style="background-color:#eac15a">
             @Html.DisplayNameFor(model => model.DireccionExacta)
         </th>
+        <th style="background-color:#eac15a">
+            @Html.DisplayNameFor(model => model.Usuario.Nombre)
+        </th>     
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Provincias.id)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Usuario.Nombre)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Nombre)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Provincias.descripcion)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.DireccionExacta)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.DisplayFor(modelItem => item.Usuario.Nombre)
+        </td>     
+        <td>
+            @Html.ActionLink("Crear", "Create", new { id=item.Id }) |
+            @Html.ActionLink("Modificar", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Deshabilitar", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
