Commit de ahorita jalelo plesse

--- a/ecoMonedasMVC/Views/Shared/_Layout.cshtml
+++ b/ecoMonedasMVC/Views/Shared/_Layout.cshtml
@@ -335,10 +335,12 @@
             <div class="row d-flex">
                 <div class="col-md-6 d-flex">
                     <div class="img d-flex align-self-stretch align-items-center justify-content-center" style="background-image:url('images/Ecomonedas/mano-del-ambiente.jpg');">
-                        <a href="https://www.youtube.com/watch?v=I4wj61hScUQ&t=64s"
+                        @*<a href="https://www.youtube.com/watch?v=I4wj61hScUQ&t=64s"
                            class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
                             <span class="icon-play"></span>
-                        </a>
+                        </a>*@
+
+                        <iframe width="1280" height="720" src="https://www.youtube.com/embed/I4wj61hScUQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="col-md-6 px-5 py-5">
