--- a/ecoMonedasMVC/Views/Home/InicioSesion.cshtml
+++ b/ecoMonedasMVC/Views/Home/InicioSesion.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿
+@{
+    Layout = null;
+}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Contact V3</title>
@@ -29,7 +33,7 @@
                     <div class="wrap-input3 validate-input" data-validate="contraseña requerida">
                         <input class="input3" type="text" name="email" placeholder="Contraseña">
                         <span class="focus-input3"></span>
-                    </div>   
+                    </div>
 
                     <div class="container-contact3-form-btn">
                         <button class="contact3-form-btn">
@@ -70,13 +74,13 @@
 
 
     @*<div class="container body-content">
-        @RenderBody()
+            @RenderBody()
 
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>*@
+            <hr />
+            <footer>
+                <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            </footer>
+        </div>*@
 </body>
 </html>
 
