--- a/ecoMonedasMVC/Views/Home/InicioSesion.cshtml
+++ b/ecoMonedasMVC/Views/Home/InicioSesion.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     Layout = null;
 }
 <!DOCTYPE html>
@@ -20,25 +19,29 @@
     <div class="bg-contact3" style="background-image: url('images/Ecomonedas/Fondo.jpg');">
         <div class="container-contact3">
             <div class="wrap-contact3">
-                <form class="contact3-form validate-form">
+                <form action="ValidarUsuario" method="post" class="contact3-form validate-form">
+
+
                     <span class="contact3-form-title" style="font-size:26px">
                         Bienvenido a ecomonedas
                     </span>
 
                     <div class="wrap-input3 validate-input" data-validate="Usuario requerido">
-                        <input class="input3" type="text" name="name" placeholder="Usuario">
+                        <input class="input3" type="text" name="email" placeholder="Usuario">
                         <span class="focus-input3"></span>
                     </div>
 
                     <div class="wrap-input3 validate-input" data-validate="contraseña requerida">
-                        <input class="input3" type="text" name="email" placeholder="Contraseña">
+                        <input class="input3" type="password" name="password" placeholder="Contraseña">
                         <span class="focus-input3"></span>
                     </div>
 
                     <div class="container-contact3-form-btn">
-                        <button class="contact3-form-btn">
+                        <button type="submit" class="contact3-form-btn">
                             Ingresar
                         </button>
+
+
                     </div>
                 </form>
             </div>
@@ -53,10 +56,10 @@
     <script src="~/Scripts/bootstrap.min.js"></script>
     <script src="~/Content/select2.min.js"></script>
     <script>
-		$(".selection-2").select2({
-			minimumResultsForSearch: 20,
-			dropdownParent: $('#dropDownSelect1')
-		});
+        $(".selection-2").select2({
+            minimumResultsForSearch: 20,
+            dropdownParent: $('#dropDownSelect1')
+        });
     </script>
     <!--===============================================================================================-->
     <script src="js/main.js"></script>
@@ -64,11 +67,11 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
     <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'UA-23581568-13');
+        gtag('config', 'UA-23581568-13');
     </script>
 
 
