--- a/ecoMonedasMVC/Views/Shared/_Layout.cshtml
+++ b/ecoMonedasMVC/Views/Shared/_Layout.cshtml
@@ -19,9 +19,8 @@
     <link rel="stylesheet" href="~/Content/flaticon.css">
     <link rel="stylesheet" href="~/Content/icomoon.css">
     <link rel="stylesheet" href="~/Content/style.css">
-
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
+
 <style type="text/css">
 
     .block-2 .front {
@@ -67,19 +66,19 @@
                     <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">
                         <span>Descubre los beneficios de reciclar</span> 
                     </h1>
-                    <p><a href="#" class="btn btn-primary py-3 px-4">Nuestro propósito</a></p>
+                    @*<p><a href="#" class="btn btn-primary py-3 px-4">Nuestro propósito</a></p>*@
                 </div>
             </div>
         </div>
     </div>
 
     @*--que son ecomonedas*@
-    <section class="ftco-section bg-secondary" id="section-counter">
+    <section class="ftco-section" id="section-counter" style="background-color:black!important">
         <div class="container-fluid">
             <div class="row d-flex">
                 <div class="col-md-6 d-flex">
-                    <div class="" 
-                         style="background-image:url('images/Ecomonedas/mano-del-ambiente.jpg');">               
+                    <div class="row justify-content-start pt-3 pb-3" 
+                         style="background-image:url('images/EcoMonedas/amarillo.jpg');">               
                     </div>
                 </div>
                 <div class="col-md-6 px-5 py-5">
@@ -117,7 +116,7 @@
                         <p>Podés canjearlo por entradas o prendas</p>
                     </div>
                 </div>
-                <div class="col-md-3 text-center services align-self-stretch ftco-animate p-4">
+                <div class="col-md-3 text-center services align-self-stretch ftco-animate p-4" style="background-color:beige!important">
                     <div class="icon" style="width: 230px; text-align: center; height: 180px;">
                         <img src="~/images/EcoMonedas/multi.png" style="width:150px" />
                     </div>
@@ -135,7 +134,7 @@
                         <p>Podés canjearlo en los excelentes productos que ofrece DoTerra</p>
                     </div>
                 </div>
-                <div class="col-md-3 text-center services align-self-stretch ftco-animate p-4">
+                <div class="col-md-3 text-center services align-self-stretch ftco-animate p-4" style="background-color:beige!important">
                     <div class="icon" style="width: 230px; text-align: center; height: 180px;" >
                         <img src="~/images/EcoMonedas/cpolis.png" style="width: 235px; margin-top: 65px;" />
                     </div>
@@ -149,67 +148,45 @@
     </section>
 
     @*--circulitos*@
-    <section class="ftco-section bg-light">
+    <section class="ftco-section bg-dark">
         <div class="container">
-            <div class="row justify-content-center mb-5 pb-3">
-                <div class="col-md-7 text-center heading-section ftco-animate">               
-                    <h2 class="mb-4" style="color:coral">Centros de acopio inscritos</h2>
-                </div>
-            </div>
-            <div class="row d-flex justify-content-center">
-                <div class="col-md-3 col-lg-2 text-center">
-                    <div class="practice-area ftco-animate">
-                        <div class="icon d-flex justify-content-center align-items-center" style="width:135px; height:80px">
-                            <span style="font-size:25px">Guadalupe</span>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="col-md-3 col-lg-2 text-center">
-                    <div class="practice-area ftco-animate">
-                        <div class="icon d-flex justify-content-center align-items-center" style="width:135px; height:80px">
-                            <span style="font-size:25px">Sabanilla</span>
-                        </div>
-
-                    </div>
-                </div>
-
-
-                <div class="col-md-3 col-lg-2 text-center">
-                    <div class="practice-area ftco-animate">
-                        <div class="icon d-flex justify-content-center align-items-center" style="width:135px; height:80px">
-                            <span style="font-size:25px">San Pedro</span>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="col-md-3 col-lg-2 text-center">
-                    <div class="practice-area ftco-animate">
-                        <div class="icon d-flex justify-content-center align-items-center" style="width:135px; height:80px">
-                            <span style="font-size:25px">Coronado</span>
-                        </div>
-
-                    </div>
-                </div>
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">First</th>
+                        <th scope="col">Last</th>
+                        <th scope="col">Handle</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>hoi</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>jkjk</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td colspan="2">Larry the Bird</td>
+                        <td>kjkjk</td>
+                    </tr>
+                </tbody>
+            </table>
 
 
-                <div class="col-md-3 col-lg-2 text-center">
-                    <div class="practice-area ftco-animate">
-                        <div class="icon d-flex justify-content-center align-items-center" style="width:135px; height:80px">
-                            <span style="font-size:25px">Guadalupe</span>
-                        </div>
 
-                    </div>
-                </div>
-
-            </div>
         </div>
     </section>
 
     @*-- materiales de reciclaje*@
-    <section class="ftco-section bg-secondary">
+    <section class="ftco-section" style="background-color:black!important">
         <div class="container-fluid">
             <div class="row justify-content-center mb-5 pb-3">
                 <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
@@ -223,7 +200,7 @@
                     <div class="block-2 ftco-animate">
                         <div class="flipper">
                             <div class="front" style="background-image: url(/images/EcoMonedas/azul.jpg);">
-                                <div class="box" style="bottom:57px">
+                                <div class="box" style="bottom:90px">
                                     <h2 style="text-align:center; color: lightcyan">PAPEL Y CARTON</h2>
                          
                                 </div>
@@ -254,7 +231,7 @@
                     <div class="block-2 ftco-animate">
                         <div class="flipper">
                             <div class="front" style="background-image: url(/images/EcoMonedas/amarillo.jpg);">
-                                <div class="box" style="bottom:57px">
+                                <div class="box" style="bottom:90px">
                                     <h2 style="text-align:center; color: lightgoldenrodyellow">PLÁSTICO</h2>
 
                                 </div>
@@ -283,7 +260,7 @@
                     <div class="block-2 ftco-animate">
                         <div class="flipper">
                             <div class="front" style="background-image: url(/images/EcoMonedas/verde.jpg);">
-                                <div class="box" style="bottom:57px">
+                                <div class="box" style="bottom:90px">
                                     <h2 style="text-align:center; color: chartreuse">VIDRIO</h2>
 
                                 </div>
@@ -306,7 +283,7 @@
                     <div class="block-2 ftco-animate">
                         <div class="flipper">
                             <div class="front" style="background-image: url(/images/EcoMonedas/rojo.jpg);">
-                                <div class="box" style="bottom:57px">
+                                <div class="box" style="bottom:90px">
                                     <h2 style="text-align:center; color: sandybrown">ALUMINIO</h2>
 
                                 </div>
@@ -334,12 +311,7 @@
         <div class="container-fluid">
             <div class="row d-flex">
                 <div class="col-md-6 d-flex">
-                    <div class="img d-flex align-self-stretch align-items-center justify-content-center" style="background-image:url('images/Ecomonedas/mano-del-ambiente.jpg');">
-                        @*<a href="https://www.youtube.com/watch?v=I4wj61hScUQ&t=64s"
-                           class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
-                            <span class="icon-play"></span>
-                        </a>*@
-
+                    <div class="img d-flex align-self-stretch align-items-center justify-content-center">                  
                         <iframe width="1280" height="720" src="https://www.youtube.com/embed/I4wj61hScUQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
@@ -461,6 +433,7 @@
         </div>
     </footer>
 
+
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
 
     <script src="~/Scripts/jquery.min.js"></script>
@@ -480,6 +453,8 @@
     <script src="~/Scripts/google-map.js"></script>
     <script src="~/Scripts/main.js"></script>
 
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
  
     <div>
         @RenderBody()
