Nuevos View de los roles de usuarios

--- a/ecoMonedasMVC/Views/MenuUsuario/Administrador.cshtml
+++ b/ecoMonedasMVC/Views/MenuUsuario/Administrador.cshtml
@@ -1,4 +1,5 @@
 ﻿
+
 @{
     ViewBag.Title = "Index";
 
@@ -7,4 +8,4 @@
 
 <h2>Index</h2>
 
-<h3>Bienvenido al panel de usuario</h3>
+<h3>Bienvenido al panel de administradores</h3>
