Centro de Acopio MVC

--- a/ecoMonedasMVC/Views/MenuUsuario/Administrador.cshtml
+++ b/ecoMonedasMVC/Views/MenuUsuario/Administrador.cshtml
@@ -9,3 +9,5 @@
 <h2>Index</h2>
 
 <h3>Bienvenido al panel de administradores</h3>
+
+@Html.ActionLink("Administrar Centros de Acopio", "Index", "CentroAcopio");
