--- a/ecoMonedasMVC/Views/CentroAcopio/Index.cshtml
+++ b/ecoMonedasMVC/Views/CentroAcopio/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Index";
+    Layout = null;
 }
 
 <h2>Index</h2>
@@ -29,7 +30,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Provincias.id)
+            @Html.DisplayFor(modelItem => item.Provincias.descripcion)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Usuario.Nombre)
