--- a/ecoMonedasMVC/Views/MenuUsuario/Index.cshtml
+++ b/ecoMonedasMVC/Views/MenuUsuario/Index.cshtml
@@ -10,4 +10,10 @@
 <h3>Bienvenido al panel de usuario</h3>
 
 
-@Html.ActionLink("Ir al panel Administrativo","Administrador")
+
+
+@Html.ActionLink("Registro","Administrador")
+
+
+
+
