--- a/ecoMonedasMVC/Views/Shared/_Layout.cshtml
+++ b/ecoMonedasMVC/Views/Shared/_Layout.cshtml
@@ -46,6 +46,12 @@
                     <li class="nav-item">@Html.ActionLink("Centros de Acopio", "Index", "Home", new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("Materiales de reciclaje", "Index", "Home", new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("Iniciar Sesión", "InicioSesion", "Home", new { @class = "nav-link" })</li>
+    
+                
+                
+                    <li class="nav-item">@Html.ActionLink("PANEL USUARIOS", "Index", "MenuUsuario", new { @class = "nav-link" })</li>
+
+                
                 </ul>
             </div>
         </div>
@@ -146,7 +152,8 @@
     @*--circulitos*@
     <section class="ftco-section bg-dark">
         <div class="container">
-            <table class="table table-hover">
+            <h1 style="color:white;text-align:center">Centros de acopio asociados a Ecomonedas</h1>
+            <table class="table table-hover" style="margin-top:55px">
                 <thead>
                     <tr style="background-color: greenyellow;text-align: center;color: darkblue;">
                         <th scope="col" colspan="1">Centro de acopio</th>
