--- a/ecoMonedasMVC/Views/Shared/_UsuariosLayout.cshtml
+++ b/ecoMonedasMVC/Views/Shared/_UsuariosLayout.cshtml
@@ -1,1 +1,232 @@
-﻿@RenderBody()
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title - My ASP.NET Application</title>
+
+    <link rel="stylesheet" href="~/Content/open-iconic-bootstrap.min.css">
+    <link rel="stylesheet" href="~/Content/animate.css">
+
+    <link rel="stylesheet" href="~/Content/owl.carousel.min.css">
+    <link rel="stylesheet" href="~/Content/owl.theme.default.min.css">
+    <link rel="stylesheet" href="~/Content/magnific-popup.css">
+    <link rel="stylesheet" href="~/Content/aos.css">
+    <link rel="stylesheet" href="~/Content/ionicons.min.css">
+    <link rel="stylesheet" href="~/Content/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="~/Content/jquery.timepicker.css">
+
+    <link rel="stylesheet" href="~/Content/flaticon.css">
+    <link rel="stylesheet" href="~/Content/icomoon.css">
+    <link rel="stylesheet" href="~/Content/style.css">
+</head>
+
+<style type="text/css">
+    .block-2 .front {
+        background-color: #f3f1f2 !important;
+        background-size: contain !important;
+    }
+</style>
+<body>
+
+    @*-- nav*@
+    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+        <div class="container">
+
+            @Html.ActionLink("NOMBRE DEL USUARIO", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="oi oi-menu"></span> Menu
+            </button>
+            <div class="collapse navbar-collapse" id="ftco-nav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">@Html.ActionLink("Billetera Virtual", "Index", "Home", new { @class = "nav-link" })</li>
+                    <li class="nav-item">@Html.ActionLink("Canjes", "Index", "Home", new { @class = "nav-link" })</li>
+                    <li class="nav-item">@Html.ActionLink("Cupones canjeados", "Index", "Home", new { @class = "nav-link" })</li>
+                 </ul>
+            </div>
+        </div>
+    </nav>
+
+  <br /> <br /> <br />
+
+        @RenderBody()
+      
+    
+    @*Ecomonedas disponibles*@
+    <div style="background-color:black;padding-bottom:50px; padding-top:30px" >
+        <h1 style="color:white; text-align:center">Tus Ecomonedas</h1>
+
+       
+            <div style="width:900px;  margin-left:275px;" >
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="card" style="width:170px">
+                            <div class="card-header">
+                                Ecomonedas
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Disponibles</h5>
+                                <div style="width:100%; text-align:center"> 
+                                    <span class="badge badge-pill badge-success" style="width: 83px; font-size: 37px;">23</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card" style="width:170px">
+                            <div class="card-header">
+                                Ecomonedas
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Canjeadas</h5>
+                                <div style="width:100%; text-align:center">
+                                    <span class="badge badge-pill badge-warning" style="width: 83px; font-size: 37px;">23</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card" style="width:170px">
+                            <div class="card-header">
+                                Ecomonedas
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Total</h5>
+                                <div style="width:100%; text-align:center">
+                                    <span class="badge badge-pill badge-primary" style="width: 83px; font-size: 37px;">23</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </div>
+
+
+    </div>
+
+
+    @*productos disponibles*@
+        <div class="bg-dark">
+            
+          
+            
+            <h1 style="color:white; text-align:center">Productos para canje</h1>
+
+            <div class="overlay"></div>
+            <div class="container">
+                <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
+                  
+                        <div class="card col-md-2" style="width: 18rem;">
+                            <img class="card-img-top" src="~/images/EcoMonedas/florex.jpg" alt="Card image cap" style="padding:10px">
+                            <div class="card-body">
+                                <h5 class="card-title">Jabon Florex</h5>
+                                <a href="#" class="btn btn-primary"> 30 ecomonedas</a>
+                            </div>
+                        </div>
+
+                    <div class="card col-md-2" style="width: 18rem;">
+                        <img class="card-img-top" src="~/images/EcoMonedas/florex.jpg" alt="Card image cap" style="padding:10px">
+                        <div class="card-body">
+                            <h5 class="card-title">Jabon Florex</h5>
+                            <a href="#" class="btn btn-primary"> 30 ecomonedas</a>
+                        </div>
+                    </div>
+
+                    <div class="card col-md-2" style="width: 18rem;">
+                        <img class="card-img-top" src="~/images/EcoMonedas/florex.jpg" alt="Card image cap" style="padding:10px">
+                        <div class="card-body">
+                            <h5 class="card-title">Jabon Florex</h5>
+                            <a href="#" class="btn btn-primary"> 30 ecomonedas</a>
+                        </div>
+                    </div>
+
+                    <div class="card col-md-2" style="width: 18rem;">
+                        <img class="card-img-top" src="~/images/EcoMonedas/florex.jpg" alt="Card image cap" style="padding:10px">
+                        <div class="card-body">
+                            <h5 class="card-title">Jabon Florex</h5>
+                            <a href="#" class="btn btn-primary"> 30 ecomonedas</a>
+                        </div>
+                    </div>
+
+                    <div class="card col-md-2" style="width: 18rem;">
+                        <img class="card-img-top" src="~/images/EcoMonedas/florex.jpg" alt="Card image cap" style="padding:10px">
+                        <div class="card-body">
+                            <h5 class="card-title">Jabon Florex</h5>
+                            <a href="#" class="btn btn-primary"> 30 ecomonedas</a>
+                        </div>
+                    </div>
+
+                    </div>
+            </div>
+            
+
+
+
+        </div>
+   
+
+    @*--footer*@
+
+    <footer class="ftco-footer ftco-bg-dark ftco-section">
+        <div class="container">
+            <div class="row mb-5">
+                <div class="col-md">
+                    <div class="ftco-footer-widget mb-4">
+
+                        <p>Visita nuestras redes sociales para conocer mas sobre Ecomonedas</p>
+                        <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
+                            <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
+                            <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
+                            <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                        </ul>
+                    </div>
+                </div>
+
+
+                <div class="col-md">
+                    <div class="ftco-footer-widget mb-4">
+                        <h2 class="ftco-heading-2">Contáctanos</h2>
+                        <div class="block-23 mb-3">
+                            <ul>
+                                <li><span class="icon icon-map-marker"></span><span class="text">San Jose Carmen Central Edificio Verde-now Oficina 23</span></li>
+                                <li><a href="#"><span class="icon icon-phone"></span><span class="text">22920405 / 22345678 </span></a></li>
+                                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@ecomonedas.com</span></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <p>
+                        Copyright &copy;
+                        <script>document.write(new Date().getFullYear());</script> All rights reserved | Marie Ugalde -- David Sanchez <a href="" target="_blank"></a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+   
+    <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
+
+    <script src="~/Scripts/jquery.min.js"></script>
+    <script src="~/Scripts/jquery-migrate-3.0.1.min.js"></script>
+    <script src="~/Scripts/popper.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/jquery.easing.1.3.js"></script>
+    <script src="~/Scripts/jquery.waypoints.min.js"></script>
+    <script src="~/Scripts/jquery.stellar.min.js"></script>
+    <script src="~/Scripts/owl.carousel.min.js"></script>
+    <script src="~/Scripts/jquery.magnific-popup.min.js"></script>
+    <script src="~/Scripts/aos.js"></script>
+    <script src="~/Scripts/jquery.animateNumber.min.js"></script>
+    <script src="~/Scripts/bootstrap-datepicker.js"></script>
+    <script src="~/Scripts/jquery.timepicker.min.js"></script>
+    <script src="~/Scripts/scrollax.min.js"></script>
+    <script src="~/Scripts/google-map.js"></script>
+    <script src="~/Scripts/main.js"></script>
+
+</body>
+</html>
