--- a/ecoMonedasMVC/Views/CentroAcopio/Index.cshtml
+++ b/ecoMonedasMVC/Views/CentroAcopio/Index.cshtml
@@ -44,7 +44,8 @@
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Deshabilitar", "Delete", new { id=item.Id })
+            @Html.ActionLink("Deshabilitar", "Delete", new { id=item.Id }) |
+            @Html.ActionLink("Habilitar", "HabilitarAcopio",new { id = item.Id })
         </td>
     </tr>
 }
