--- a/ecoMonedasMVC/Views/Shared/_AdminCentroAcopioLayout.cshtml
+++ b/ecoMonedasMVC/Views/Shared/_AdminCentroAcopioLayout.cshtml
@@ -30,7 +30,7 @@
 <body>
 
     @*-- nav*@
-    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark" id="ftco-navbar">
         <div class="container">
 
             @Html.ActionLink("NOMBRE DEL USUARIO", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
