--- a/ecoMonedasMVC/Views/MenuUsuario/Index.cshtml
+++ b/ecoMonedasMVC/Views/MenuUsuario/Index.cshtml
@@ -2,18 +2,14 @@
 @{
     ViewBag.Title = "Index";
 
-    Layout = "~/Views/Shared/_UsuariosLayout.cshtml";
+    Layout = null;
 }
 
-<h2>Index</h2>
+<h2>Ups! Algo salió Mal</h2>
 
-<h3>Bienvenido al panel de usuario</h3>
+<h3>Bienvenido al panel de usuario de momento no cuenta con un rol asignado valido porfavor comuniquese con el Departamento de Información</h3>
 
-
-
-
-@Html.ActionLink("Registro","Administrador")
-
+@Html.ActionLink("Volver al inicio", "Index", "Home")
 
 
 
