--- a/ecoMonedasMVC/Views/Home/InicioSesion.cshtml
+++ b/ecoMonedasMVC/Views/Home/InicioSesion.cshtml
@@ -16,7 +16,17 @@
 </head>
 <body>
 
-    <div class="bg-contact3" style="background-image: url('images/Ecomonedas/Fondo.jpg');">
+    @if (ViewBag.Mensaje != "" && ViewBag.Mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>@ViewBag.Mensaje</strong>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    }
+
+    <div class="bg-contact3" style="background-image: url('/images/Ecomonedas/Fondo.jpg');">
         <div class="container-contact3">
             <div class="wrap-contact3">
                 <form action="ValidarUsuario" method="post" class="contact3-form validate-form">
@@ -47,6 +57,7 @@
             </div>
         </div>
     </div>
+
 
 
     <div id="dropDownSelect1"></div>
