--- a/ecoMonedasMVC/Views/CentroAcopio/Delete.cshtml
+++ b/ecoMonedasMVC/Views/CentroAcopio/Delete.cshtml
@@ -1,13 +1,15 @@
 ﻿@model ecoMonedasMVC.Models.CentroAcopio
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Deshabilitar";
+    Layout = "~/Views/Shared/_LayoutMantenimiento.cshtml";
 }
+<div style="text-align:center">
+    <h2>Deshabilitar</h2>
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
+    <h3>Esta seguro de deshabilitar este</h3>
+</div>
+<div class="center" style="text-align:center">
     <h4>CentroAcopio</h4>
     <hr />
     <dl class="dl-horizontal">
@@ -16,7 +18,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Provincias.id)
+            @Html.DisplayFor(model => model.Provincias.descripcion)
         </dd>
 
         <dt>
@@ -49,8 +51,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Deshabilitar" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Deshabilitar" class="btn btn-danger" /> |
+            @Html.ActionLink("Volver a la lista", "Index",new { @class="btn btn-primary" })
         </div>
     }
 </div>
