--- a/ecoMonedasMVC/Views/CentroAcopio/Index.cshtml
+++ b/ecoMonedasMVC/Views/CentroAcopio/Index.cshtml
@@ -1,53 +1,72 @@
 ﻿@model IEnumerable<ecoMonedasMVC.Models.CentroAcopio>
 
 @{
-    ViewBag.Title = "Index";
-    Layout = null;
+    ViewBag.Title = "Mantenimiento de Centros de Acopio";
+    Layout = "~/Views/Shared/_LayoutMantenimiento.cshtml";
 }
 
-<h2>Index</h2>
+<div class="container">
+    <div class="col-12">
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Provincias.id)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Usuario.Nombre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Nombre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DireccionExacta)
-        </th>
-        <th></th>
-    </tr>
+        <h2>Mantenimiento de Centros de Acopio</h2>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Provincias.descripcion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Usuario.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DireccionExacta)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Deshabilitar", "Delete", new { id=item.Id }) |
-            @Html.ActionLink("Habilitar", "HabilitarAcopio",new { id = item.Id })
-        </td>
-    </tr>
-}
+        <p>
+            @Html.ActionLink("Crear Nuevo", "Create")
+        </p>
 
-</table>
+        <table class="table">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Provincias.id)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Usuario.Nombre)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Nombre)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DireccionExacta)
+                </th>
+                <th>
+                    Estado
+                </th>
+                <th></th>
+            </tr>
+
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Provincias.descripcion)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Usuario.Nombre)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nombre)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DireccionExacta)
+                    </td>
+                    <td>
+                        @if (item.Estado == 0)
+                        {@Html.Encode("Habilitado");
+                    }
+                    else
+                    { @Html.Encode("Deshabilitado");
+                }
+                    </td>
+                    <td>
+                        @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+                        @Html.ActionLink("Deshabilitar", "Delete", new { id = item.Id }) |
+                        @Html.ActionLink("Habilitar", "HabilitarAcopio", new { id = item.Id })
+                    </td>
+                </tr>
+            }
+
+        </table>
+        @Html.ActionLink("Volver al panel de usuario", "VolverAlPanelUsuario", new { @class = "btn btn-primary" })
+    </div>
+
+</div>
