--- a/ecoMonedasMVC/Views/Material/Index.cshtml
+++ b/ecoMonedasMVC/Views/Material/Index.cshtml
@@ -1,53 +1,59 @@
 ﻿@model IEnumerable<ecoMonedasMVC.Models.Material>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Materiales de Reciclaje";
 
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_LayoutMantenimiento.cshtml";
 }
 
-<h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Colores.descripcion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.nombre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.imagen)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.precioUnidad)
-        </th>
-        <th></th>
-    </tr>
+<div class="container">
+    <div class="col-lg-12">
+        <h2>Mantenimiento de Materiales de Reciclaje</h2>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Colores.descripcion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.imagen)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.precioUnidad)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
-        </td>
-    </tr>
-}
+        <p>
+            @Html.ActionLink("Crear Nuevo Material", "Create")
+        </p>
+        <table class="table">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Colores.descripcion)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.nombre)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.imagen)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.precioUnidad)
+                </th>
+                <th></th>
+            </tr>
 
-</table>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Colores.descripcion)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.nombre)
+                    </td>
+                    <td>
+                        <img src="~/Content/Imagenes/@Html.DisplayFor(modelItem => item.imagen)" style="max-height:50px;max-width:50px" />
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.precioUnidad)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Editar", "Edit", new { id = item.id })
+                    </td>
+                </tr>
+            }
+
+        </table>
+
+        @Html.ActionLink("Volver al panel de usuario", "VolverAlPanelUsuario", new { @class = "btn btn-primary" })
+    </div>
+</div>
