--- a/ecoMonedasMVC/Views/Shared/Error.cshtml
+++ b/ecoMonedasMVC/Views/Shared/Error.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@{
+    Layout = "~/Views/Shared/_LayoutMantenimiento.cshtml";
+}
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
