--- a/ecoMonedasMVC/Views/Usuario/Index.cshtml
+++ b/ecoMonedasMVC/Views/Usuario/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Nuevo usuario", "Create",new { @class = "btn btn-primary"})
 </p>
 <table class="table">
     <tr>
